unpackaged/main/default/objects/Silos_and_Questionnaire__mdt/Silos_and_Questionnaire__mdt.object-meta.xml
<CustomObject>
    <description>This metadata type will be used to assign the appropriate product with the appropriate Silo and Questionnaire form when creating a new Backline Escalation case.</description>
    <label>Silos and Questionnaire</label>
    <pluralLabel>Silos and Questionnaire</pluralLabel>
</CustomObject>