unpackaged/main/default/objects/Silos_and_Questionnaire__mdt/fields/Questionnaire__c.field-meta.xml
<CustomField>
    <fullName>Questionnaire__c</fullName>
    <description>Questionnaire form</description>
    <label>Questionnaire</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>PLC</fullName>
                <default>true</default>
                <label>PLC</label>
            </value>
            <value>
                <fullName>HMI</fullName>
            </value>
            <value>
                <fullName>Drives_Motion</fullName>
            </value>
            <value>
                <fullName>Standard Products</fullName>
            </value>
            <value>
                <fullName>Agency Approval</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>