unpackaged/main/default/objects/Silos_and_Questionnaire__mdt/fields/Queue_Id__c.field-meta.xml
<CustomField>
    <fullName>Queue_Id__c</fullName>
    <description>Corresponding queue id</description>
    <label>Queue Id</label>
    <length>100</length>
    <type>Text</type>
</CustomField>