unpackaged/main/default/objects/Silos_and_Questionnaire__mdt/fields/Record_Type_Id__c.field-meta.xml
<CustomField>
    <fullName>Record_Type_Id__c</fullName>
    <description>Case Record Type ID that corresponds to the appropriate questionnaire</description>
    <label>Record Type Id</label>
    <length>100</length>
    <type>Text</type>
</CustomField>